@@ -399,18 +399,25 @@ __EOT__
 
 print "DEFINE = @{[sort keys %define]}\n";
 
-WriteMakefile(
-    'NAME'	    => 'IO::Tty',
-    'VERSION'       => $Package_Version,
-    'DEFINE'	    => join(" ", sort keys %define),
-    'LIBS'          => join(" ", @libs),
-    'clean'	    => {'FILES' => 'xssubs.c conf Tty.exp_old log'},
-    'realclean'	    => {'FILES' => 'Tty IO-Tty.ppd'},
-    'MAP_TARGET'    => 'perltty',
-    ($] >= 5.00503) ?
-    ( AUTHOR    => 'Roland Giersig <RGiersig@cpan.org>',
-      ABSTRACT  => 'Pseudo ttys and constants' ) :
-    (),
+WriteMakefile1(
+    'NAME'	     => 'IO::Tty',
+    'VERSION'        => $Package_Version,
+    'DEFINE'	     => join(" ", sort keys %define),
+    'LIBS'           => join(" ", @libs),
+    'clean'	     => {'FILES' => 'xssubs.c conf Tty.exp_old log'},
+    'realclean'	     => {'FILES' => 'Tty IO-Tty.ppd'},
+    'MAP_TARGET'     => 'perltty',
+    'AUTHOR'         => 'Roland Giersig <RGiersig@cpan.org>',
+    'ABSTRACT'       => 'Pseudo ttys and constants',
+    'LICENSE'        => 'perl',
+    'BUILD_REQUIRES' =>  {
+	'Test::More' => 0,  # For testing
+    },
+    'META_MERGE'     => {
+	'resources'    => {
+	    'repository'  => 'https://expectperl.svn.sourceforge.net/svnroot/expectperl/IO-Tty/trunk',
+	},
+    },
 );
 
 sub MY::postamble {
@@ -422,5 +429,29 @@ sub MY::postamble {
 dist : ppd
 
 ESQ
+}
+
+
+sub WriteMakefile1 {  #Written by Alexandr Ciornii, version 0.21. Added by eumm-upgrade.
+  my %params=@_;
+  my $eumm_version=$ExtUtils::MakeMaker::VERSION;
+  $eumm_version=eval $eumm_version;
+  die "EXTRA_META is deprecated" if exists $params{EXTRA_META};
+  die "License not specified" if not exists $params{LICENSE};
+  if ($params{BUILD_REQUIRES} and $eumm_version < 6.5503) {
+    #EUMM 6.5502 has problems with BUILD_REQUIRES
+    $params{PREREQ_PM}={ %{$params{PREREQ_PM} || {}} , %{$params{BUILD_REQUIRES}} };
+    delete $params{BUILD_REQUIRES};
+  }
+  delete $params{CONFIGURE_REQUIRES} if $eumm_version < 6.52;
+  delete $params{MIN_PERL_VERSION} if $eumm_version < 6.48;
+  delete $params{META_MERGE} if $eumm_version < 6.46;
+  delete $params{META_ADD} if $eumm_version < 6.46;
+  delete $params{LICENSE} if $eumm_version < 6.31;
+  delete $params{AUTHOR} if $] < 5.005;
+  delete $params{ABSTRACT_FROM} if $] < 5.005;
+  delete $params{BINARY_LOCATION} if $] < 5.005;
+
+  WriteMakefile(%params);
 }
 
