@@ -1,7 +1,8 @@
 2010-09-10   Todd Rinaldo <toddr@cpan.org>
 	* RT 45008 - only try TIOCSCTTY if we don't have a ctty
 	* RT 53883 - IO::Tty detection on BeOS w/fix
-
+	* RT 60014 - better META.yml by modernizing Makefile.PL
+	
 2009-02-05   Roland Giersig  <rgiersig@cpan.org>
 
 	* v1.08
